// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders the UI snapshot correctly 1`] = `
<aside
  className="css-1xdhyk6"
  data-type="informative"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="undefined-banner-icon"
    focusable={false}
    role="img"
    title="Banner informative icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 2`] = `
<aside
  className="css-1xdhyk6"
  data-type="negative"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner negative icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-14uzp4u"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 3`] = `
<aside
  className="css-1xdhyk6"
  data-type="neutral"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 4`] = `
<aside
  className="css-1xdhyk6"
  data-type="positive"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner positive icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 5`] = `
<aside
  className="css-1xdhyk6"
  data-type="recommendation"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner recommendation icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 6`] = `
<aside
  className="css-1xdhyk6"
  data-type="warning"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner warning icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 7`] = `
<aside
  className="css-1xdhyk6"
  data-type="neutral"
  id="bannerID4"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID4-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 8`] = `
<aside
  className="css-1xdhyk6"
  data-type="neutral"
  id="bannerID7"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="bannerID7-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    Banner content.
  </div>
  <button
    aria-label="Close the banner"
    className="chakra-button css-8bx9xp"
    id="bannerID7-dismissible-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="chakra-icon css-1grhd2q"
      data-testid="bannerID7-dismissible-icon"
      focusable={false}
      role="img"
      title="Banner close icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </button>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 9`] = `
<aside
  className="css-16h1ce8"
  data-type="neutral"
  id="chakra"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="chakra-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 10`] = `
<aside
  className="css-1xdhyk6"
  data-testid="props"
  data-type="neutral"
  id="props"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1grhd2q"
    data-testid="props-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <div
    className="css-0"
  >
    <h2
      className="chakra-heading css-zjio3a"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;
